# ironplc

./: .buildinfo  .claassistant.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  404.html  AGENTS.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR.md  Cargo.toml  README.md  ROADMAP.md  SAGE.md  complex_test.st  comprehensive_test.st  genindex.html  index.html  justfile  objects.inv  plan.md  search.html  searchindex.js  sitemap.xml  test.st  trademarks.html
compiler/: .llvm-cov  CONTRIBUTING.md  Cargo.toml  README.md  basicusage.html  index.html  install.sh  justfile  setup.nsi  simple_case.st  test_case.st  test_complex_comment.st  test_debug_comment.st  test_simple_asterisk.st  test_simple_comment.st  test_simple_init.st  test_specific_comment.st  test_string_debug.st  test_string_type_declaration.st  test_string_with_length.st  test_string_with_length_proper.st
compiler/.cargo/: config  config.toml
compiler/analyzer/: Cargo.toml  README.md  build.rs
compiler/analyzer/proptest-regressions/: rule_action_block_analysis.txt  rule_array_struct_analysis.txt  rule_control_flow_analysis.txt  rule_external_function_type_checking.txt  rule_range_constraint_analysis.txt  rule_reference_parameter_analysis.txt
compiler/analyzer/src/: compilation_set.rs  extractors.rs  function_environment.rs  intermediate_type.rs  lib.rs  memory_layout.rs  rule_action_block_analysis.rs  rule_array_struct_analysis.rs  rule_bit_access_range.rs  rule_class_method_analysis.rs  rule_control_flow_analysis.rs  rule_decl_struct_element_unique_names.rs  rule_decl_subrange_limits.rs  rule_enumeration_values_unique.rs  rule_external_function_type_checking.rs  rule_function_block_invocation.rs  rule_function_call_declared.rs  rule_function_call_type_check.rs  rule_mixed_located_var_declarations.rs  rule_null_pointer_analysis.rs  rule_pou_hierarchy.rs  rule_pous_no_cycles.rs  rule_program_task_definition_exists.rs  rule_range_constraint_analysis.rs  rule_ref_to.rs  rule_reference_parameter_analysis.rs  rule_reference_type_analysis.rs  rule_runtime_error_analysis.rs  rule_stdlib_type_redefinition.rs  rule_string_encoding_compat.rs  rule_task_names_unique.rs  rule_unsupported_stdlib_type.rs  rule_use_declared_enumerated_value.rs  rule_use_declared_symbolic_var.rs  rule_var_decl_const_initialized.rs  rule_var_decl_const_not_fb.rs  rule_var_decl_global_const_requires_external_const.rs  rule_var_decl_initializer_type_compat.rs  scoped_table.rs  semantic_analysis_tests.rs  (+30 more)
compiler/benchmarks/: Cargo.toml
compiler/benchmarks/benches/: st_benchmark.rs
compiler/benchmarks/examples/: vm_vs_native.rs
compiler/benchmarks/src/: lib.rs
compiler/benchmarks/tests/: profile_for_loop.rs
compiler/codegen/: Cargo.toml  build.rs
compiler/codegen/benches/: bench_helpers.rs  st_benchmark.rs
compiler/codegen/src/: call_graph.rs  compile.rs  compile_array.rs  compile_call.rs  compile_enum.rs  compile_expr.rs  compile_fn.rs  compile_setup.rs  compile_stmt.rs  compile_string.rs  compile_struct.rs  emit.rs  error.rs  lib.rs  optimize.rs  source_lookup.rs  spec_conformance.rs
compiler/codegen/tests/: compile_abs.rs  compile_abs_float.rs  compile_add.rs  compile_array.rs  compile_bitwise.rs  compile_bool.rs  compile_case.rs  compile_cmp.rs  compile_dup.rs  compile_exit_return.rs  compile_float.rs  compile_func_forms.rs  compile_if.rs  compile_limit.rs  compile_limit_float.rs  compile_loops.rs  compile_max.rs  compile_max_float.rs  compile_min.rs  compile_min_float.rs  compile_mod.rs  compile_mul.rs  compile_mux.rs  compile_mux_float.rs  compile_mux_lint.rs  compile_neg.rs  compile_not.rs  compile_pow.rs  compile_sel.rs  compile_sel_float.rs  compile_shift.rs  (+114 more)
compiler/container/: Cargo.toml  build.rs
compiler/dsl/: Cargo.toml  README.md
compiler/dsl-macro-derive/: Cargo.toml
compiler/dsl_macro_derive/: Cargo.toml  README.md
compiler/homebrew/: README.md
compiler/ironplc-cli/: Cargo.toml
compiler/ironplc-mcp/: Cargo.toml
compiler/mcp/: Cargo.toml  build.rs
compiler/nsis/: setup.nsi
compiler/parser/: Cargo.toml  README.md
compiler/playground/: Cargo.toml  LICENSE
compiler/plc2plc/: Cargo.toml  LICENSE  README.md
compiler/plc2x/: Cargo.toml
compiler/problems/: Cargo.toml  P0001.html  P0002.html  P0003.html  P0004.html  P0005.html  P0006.html  P0007.html  P0008.html  P0009.html  P0010.html  P0011.html  P0012.html  P0013.html  P0014.html  P0015.html  P0016.html  P0017.html  P0018.html  P0019.html  P0020.html  P0021.html  P0022.html  P0023.html  P0024.html  P0025.html  P0026.html  P0027.html  P0028.html  P0029.html  P0030.html  P0031.html  P0032.html  P0033.html  P0034.html  P0035.html  P0036.html  P0037.html  P0038.html  P0039.html  (+97 more)
compiler/project/: Cargo.toml
compiler/source-formats/: index.html  plcopen-xml.html  text.html  twincat.html
compiler/sources/: Cargo.toml  README.md
compiler/spec_requirements_gen/: Cargo.toml
compiler/spec_test_macro/: Cargo.toml
compiler/test/: Cargo.toml
compiler/vm/: Cargo.toml  build.rs
compiler/vm-cli/: Cargo.toml  build.rs
compiler/wasm/: Cargo.toml
compiler/web-app/: Cargo.toml
compiler/wix/: main.wxs
parser/: Cargo.toml
parser/src/: error.rs  keyword.rs  lib.rs  mapper.rs  parser.rs  preprocessor.rs  tests.rs
plc2x/: Cargo.toml
plc2x/src/: cli.rs  error.rs  lib.rs  lsp.rs  main.rs  rule_constant_vars_initialized.rs  rule_decl_struct_element_unique_names.rs  rule_decl_subrange_limits.rs  rule_enumeration_values_unique.rs  rule_function_block_invocation.rs  rule_global_const_implies_external_const.rs  rule_pous_no_cycles.rs  rule_program_task_definition_exists.rs  rule_use_declared_enumerated_value.rs  rule_use_declared_fb.rs  rule_use_declared_symbolic_var.rs  rule_var_decl_const_initialized.rs  rule_var_decl_const_not_fb.rs  rule_var_decl_global_const_requires_external_const.rs  stages.rs  symbol_graph.rs  symbol_table.rs  test_helpers.rs  type_resolver.rs  xform_resolve_late_bound_data_decl.rs  xform_resolve_late_bound_type_initializer.rs  xform_resolve_late_bound_types.rs
plc2x/tests/: cli.rs
(+2611 files in other folders)
