[workspace]
members = [
    "analyzer",
    "benchmarks",
    "codegen",
    "container",
    "ironplc-cli",
    "ironplc-mcp",
    "ironplc-project",
    "plc2plc",
    "dsl",
    "dsl_macro_derive",
    "parser",
    "problems",
    "sources",
    "test",
    "vm",
    "vm-cli",
    "playground"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = [ "Garret Fick" ]
license = "MIT"
repository = "https://github.com/ironplc/ironplc"
