[workspace]
members = [
    "analyzer",
    "benchmarks",
    "codegen",
    "container",
    "ironplc-cli",
    "mcp",
    "project",
    "plc2plc",
    "dsl",
    "dsl_macro_derive",
    "parser",
    "problems",
    "sources",
    "spec_requirements_gen",
    "test",
    "vm",
    "vm-cli",
    "playground",
    "spec_test_macro"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = [ "Garret Fick" ]
license = "MIT"
repository = "https://github.com/ironplc/ironplc"

# Reduce per-binary debug-info size. `line-tables-only` retains the file/line
# tables that `cargo llvm-cov` needs to map coverage hits to source, but drops
# the type-, variable-, and inline-scope DWARF sections that dominate target/
# disk usage and link time across the test fan-out.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
