[workspace]
members = [
    "analyzer",
    "benchmarks",
    "codegen",
    "container",
    "ironplc-cli",
    "mcp",
    "project",
    "plc2plc",
    "dsl",
    "dsl_macro_derive",
    "parser",
    "problems",
    "sources",
    "spec_requirements_gen",
    "test",
    "vm",
    "vm-cli",
    "playground",
    "spec_test_macro"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = [ "Garret Fick" ]
license = "MIT"
repository = "https://github.com/ironplc/ironplc"

# IronPLC must remain free of `unsafe` Rust. `deny` makes the compiler
# reject any `unsafe` block, fn, trait, or impl in our code. `deny`
# (rather than `forbid`) is required so that proc-macros which wrap
# unsafe internally — e.g. `ctor::ctor`, whose expansion includes
# `#[allow(unsafe_code)]` — continue to work. Per development standards,
# IronPLC code must not add `#[allow(unsafe_code)]` to bypass this.
[workspace.lints.rust]
unsafe_code = "deny"

# Denying `deprecated` turns any use of a `#[deprecated]` item into a hard
# compile error. We deprecate the compiler-located problem variants
# (`Problem::NotImplemented`, `Problem::InternalError`) so that constructing them
# directly via `Diagnostic::problem(...)` — which drops the compiler file/line the
# P9xxx dashboards rank — fails to compile. The sanctioned `Diagnostic`
# constructors opt back in with `#[allow(deprecated)]`.
deprecated = "deny"

# Reduce per-binary debug-info size. `line-tables-only` retains the file/line
# tables that `cargo llvm-cov` needs to map coverage hits to source, but drops
# the type-, variable-, and inline-scope DWARF sections that dominate target/
# disk usage and link time across the test fan-out.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
