[package]
name = "ironplc-parser"
version = "0.1.0"
authors = [ "Garret Fick" ]
edition = "2021"
description = "Parser for IEC 61131-3 language elements."
repository = "https://github.com/garretfick/ironplc"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[features]
trace = ["peg/trace"]

[dependencies]
time = "0.3.17"
ironplc-dsl = { path = "../dsl", version = "0.1.0" }

[dependencies.peg]
version = "0.8.1"
