[package]
name = "ironplc-plc2x"
version = "0.1.0"
authors = [ "Garret Fick" ]
edition = "2021"
description = "Compiler front-end for ironplc."
repository = "https://github.com/garretfick/ironplc"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
ironplc-parser = { path = "../parser", version = "0.1.0" }
ironplc-dsl = { path = "../dsl", version = "0.1.0" }
time = "0.3.11"