[package]
name = "ironplc-plc2x"
version = "0.1.0"
authors = [ "Garret Fick" ]
edition = "2021"
description = "Compiler front-end for ironplc."
repository = "https://github.com/garretfick/ironplc"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[features]
trace = ["ironplc-parser/trace"]

[dependencies]
ironplc-parser = { path = "../parser", version = "0.1.0" }
ironplc-dsl = { path = "../dsl", version = "0.1.0" }
time = "0.3.17"
phf = { version = "0.11", features = ["macros"] }
petgraph = { version = "0.6.2" }
clap = { version = "4.0", features = ["derive"] }
codespan-reporting = { version = "0.11.1" }
