[package]
name = "ironplc-analyzer"
description = "Semantic analyzer for PLC code."
version = "0.129.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
ironplc-parser = { path = "../parser", version = "0.129.0" }
ironplc-dsl = { path = "../dsl", version = "0.129.0" }
ironplc-problems = { path = "../problems", version = "0.129.0" }
ironplc-test = { path = "../test", version = "0.129.0" }
log = "0.4.20"
phf = { version = "0.11", features = ["macros"] }
petgraph = { version = "0.8" }
fixedbitset = { version = "0.5" }

[dev-dependencies]
ironplc-parser = { path = "../parser", version = "0.129.0" }
