[package]
name = "ironplc-benchmarks"
description = "Performance benchmarks for IronPLC"
version = "0.178.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ironplc-analyzer = { path = "../analyzer", version = "0.178.0" }
ironplc-codegen = { path = "../codegen", version = "0.178.0" }
ironplc-container = { path = "../container", version = "0.178.0" }
ironplc-dsl = { path = "../dsl", version = "0.178.0" }
ironplc-parser = { path = "../parser", version = "0.178.0" }
ironplc-vm = { path = "../vm", version = "0.178.0", features = ["test-support"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "st_benchmark"
harness = false
