[package]
name = "ironplc-benchmarks"
description = "Performance benchmarks for IronPLC"
version = "0.226.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
profiling = ["ironplc-vm/profiling"]

[dependencies]
ironplc-analyzer = { path = "../analyzer", version = "0.226.0" }
ironplc-codegen = { path = "../codegen", version = "0.226.0" }
ironplc-container = { path = "../container", version = "0.226.0" }
ironplc-dsl = { path = "../dsl", version = "0.226.0" }
ironplc-parser = { path = "../parser", version = "0.226.0" }
ironplc-vm = { path = "../vm", version = "0.226.0", features = ["test-support"] }

# criterion is only used by `benches/st_benchmark.rs`, so it belongs in
# dev-dependencies rather than dependencies. Keeping it as a normal
# dependency pulled it (and its transitive `alloca` build-dependency) into
# the release build graph, which broke the musl cross-compile in the
# packaging step because `alloca`'s build script requires a musl C compiler.
[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "st_benchmark"
harness = false

[lints]
workspace = true
