[package]
name = "ironplc-codegen"
description = "Bytecode code generator for IronPLC"
version = "0.168.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ironplc-dsl = { path = "../dsl", version = "0.168.0" }
ironplc-container = { path = "../container", version = "0.168.0" }
ironplc-problems = { path = "../problems", version = "0.168.0" }

[dev-dependencies]
ironplc-analyzer = { path = "../analyzer", version = "0.168.0" }
ironplc-parser = { path = "../parser", version = "0.168.0" }
ironplc-vm = { path = "../vm", version = "0.168.0" }
proptest = "1"
