[package]
name = "ironplc-codegen"
description = "Bytecode code generator for IronPLC"
version = "0.214.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ironplc-dsl = { path = "../dsl", version = "0.214.0" }
ironplc-container = { path = "../container", version = "0.214.0" }
ironplc-problems = { path = "../problems", version = "0.214.0" }
ironplc-analyzer = { path = "../analyzer", version = "0.214.0" }
blake3 = "1"

[build-dependencies]
ironplc-spec-requirements-gen = { path = "../spec_requirements_gen" }

[dev-dependencies]
ironplc-analyzer = { path = "../analyzer", version = "0.214.0" }
ironplc-parser = { path = "../parser", version = "0.214.0" }
ironplc-vm = { path = "../vm", version = "0.214.0", features = ["test-support"] }
spec_test_macro = { path = "../spec_test_macro" }
proptest = "1"
rstest = "0.26"

# All integration tests live in a single binary so compile/link work (and
# llvm-cov instrumentation) is amortized across the whole suite instead of
# paid per-file. With every test file moved into `tests/it/`, no top-level
# `tests/*.rs` remain for Cargo to auto-discover — only this explicit target.
[[test]]
name = "it"
path = "tests/it/main.rs"

[lints]
workspace = true
