[package]
name = "ironplc-container"
description = "Binary container format for IronPLC bytecode files"
version = "0.206.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []

[build-dependencies]
ironplc-spec-requirements-gen = { path = "../spec_requirements_gen" }

[dev-dependencies]
spec_test_macro = { path = "../spec_test_macro" }
