[package]
name = "ironplc-container"
description = "Binary container format for IronPLC bytecode files"
version = "0.220.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["dep:blake3"]

[dependencies]
blake3 = { version = "1", optional = true }

[build-dependencies]
ironplc-spec-requirements-gen = { path = "../spec_requirements_gen" }

[dev-dependencies]
spec_test_macro = { path = "../spec_test_macro" }

[lints]
workspace = true
