[package]
name = "ironplc-dsl"
description = "Domain-specific language objects for IEC 61131 language elements."
version = "0.36.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
time = "0.3.17"
ironplc-problems = { path = "../problems", version = "0.36.0" }
dsl-macro-derive = { path = "../dsl-macro-derive", version = "0.36.0" }
paste = "1.0"

