[package]
name = "ironplc-dsl"
description = "Domain-specific language objects for IEC 61131 language elements."
version = "0.50.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
time = "0.3.34"
ironplc-problems = { path = "../problems", version = "0.50.0" }
dsl_macro_derive = { path = "../dsl_macro_derive", version = "0.50.0" }
paste = "1.0"

