[package]
name = "ironplc-dsl"
description = "Domain-specific language objects for IEC 61131 language elements. Defines the intermediate set of objects are are the output of parsing and contains the syntax tree."
version = "0.151.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
time = "0.3.34"
ironplc-problems = { path = "../problems", version = "0.151.0" }
dsl_macro_derive = { path = "../dsl_macro_derive", version = "0.151.0" }
paste = "1.0"
logos = "0.14.0"
regex = "1.10.4"
lazy_static = "1.4.0"
