[package]
name = "ironplc-mcp"
description = "Model Context Protocol server for IronPLC (shell — implementation pending)."
version = "0.190.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
ironplc-project = { path = "../ironplc-project", version = "0.190.0" }

[[bin]]
name = "ironplcmcp"
path = "src/main.rs"
