[package]
name = "ironplc-mcp"
description = "Model Context Protocol server for IronPLC."
version = "0.192.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
ironplc-dsl = { path = "../dsl", version = "0.192.0" }
ironplc-parser = { path = "../parser", version = "0.192.0" }
ironplc-project = { path = "../project", version = "0.192.0" }
schemars = "1"

rmcp = { version = "1.4", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
log = "0.4.20"

[[bin]]
name = "ironplcmcp"
path = "src/main.rs"

[dev-dependencies]
spec_test_macro = { path = "../spec_test_macro" }
