[package]
name = "ironplc-mcp"
description = "Model Context Protocol server for IronPLC."
version = "0.202.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
ironplc-analyzer = { path = "../analyzer", version = "0.202.0" }
ironplc-codegen = { path = "../codegen", version = "0.202.0" }
ironplc-container = { path = "../container", version = "0.202.0" }
ironplc-dsl = { path = "../dsl", version = "0.202.0" }
ironplc-parser = { path = "../parser", version = "0.202.0" }
ironplc-problems = { path = "../problems", version = "0.202.0" }
ironplc-project = { path = "../project", version = "0.202.0" }

base64 = "0.22"
schemars = "1"

rmcp = { version = "1.4", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
log = "0.4.20"

[[bin]]
name = "ironplcmcp"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "3.0" }
rstest = "0.26"
spec_test_macro = { path = "../spec_test_macro" }
