[package]
name = "ironplc-parser"
description = "Parser for IEC 61131-3 language elements."
version = "0.59.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[features]
trace = ["peg/trace"]

[dependencies]
time = "0.3.17"
phf = { version = "0.11", features = ["macros"] }
ironplc-dsl = { path = "../dsl", version = "0.59.0" }
ironplc-problems = { path = "../problems", version = "0.59.0" }
peg = "0.8.1"
logos = "0.14.0"
