[package]
name = "ironplc-plc2plc"
description = "Generates PLC code from PLC code."
version = "0.53.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
ironplc-dsl = { path = "../dsl", version = "0.53.0" }
dsl_macro_derive = { path = "../dsl_macro_derive", version = "0.53.0" }
paste = "1.0"

[dev-dependencies]
ironplc-parser = { path = "../parser", version = "0.53.0" }
