[package]
name = "ironplc-plc2plc"
description = "Generates PLC code from PLC code. The primary purpose is to validate parsing but it can be useful to understand the internal representation."
version = "0.231.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
ironplc-dsl = { path = "../dsl", version = "0.231.0" }
ironplc-test = { path = "../test", version = "0.231.0" }
dsl_macro_derive = { path = "../dsl_macro_derive", version = "0.231.0" }
paste = "1.0"

[build-dependencies]
ironplc-spec-requirements-gen = { path = "../spec_requirements_gen" }

[dev-dependencies]
ironplc-parser = { path = "../parser", version = "0.231.0" }
spec_test_macro = { path = "../spec_test_macro" }

[lints]
workspace = true
