[package]
name = "ironplcc"
description = "Compiler front-end for ironplc."
version = "0.13.25"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[features]
trace = ["ironplc-parser/trace"]

[dependencies]
ironplc-parser = { path = "../parser", version = "0.13.25" }
ironplc-dsl = { path = "../dsl", version = "0.13.25" }
time = "0.3.17"
phf = { version = "0.11", features = ["macros"] }
petgraph = { version = "0.6.2" }
fixedbitset = { version = "0.4.2" }
clap = { version = "4.0", features = ["derive", "wrap_help"] }
codespan-reporting = { version = "0.11.1" }
lsp-server = "0.7"
lsp-types = "0.94"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "3.0" }

[[bin]]
name = "ironplcc"
path = "bin/main.rs"
