[package]
name = "ironplcc"
description = "Compiler front-end for ironplc. This component provides both the CLI and Language Server Protocol"
version = "0.135.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[features]
trace = ["ironplc-parser/trace"]

[dependencies]
ironplc-analyzer = { path = "../analyzer", version = "0.135.0" }
ironplc-parser = { path = "../parser", version = "0.135.0" }
ironplc-dsl = { path = "../dsl", version = "0.135.0" }
ironplc-problems = { path = "../problems", version = "0.135.0" }
ironplc-plc2plc = { path = "../plc2plc", version = "0.135.0" }
ironplc-sources = { path = "../sources", version = "0.135.0" }
ironplc-test = { path = "../test", version = "0.135.0" }

time = "0.3.17"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
codespan-reporting = { version = "0.12" }
lsp-server = "0.7"
lsp-types = "0.97"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4.20"
crossbeam-channel = "0.5"
encoding_rs = "0.8"

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "3.0" }

[[bin]]
name = "ironplcc"
path = "bin/main.rs"
