[package]
name = "ironplc-problems"
description = "Generated problem messages. This crate turns a CSV file containing error descriptions into an enumeration."
version = "0.129.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
csv = "1.2"
