[package]
name = "ironplc-project"
description = "Shared IronPLC project model, tokenization, and IPLC disassembly for CLI, LSP, and tooling."
version = "0.190.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "experimental" }

[features]
trace = ["ironplc-parser/trace"]

[dependencies]
ironplc-analyzer = { path = "../analyzer", version = "0.190.0" }
ironplc-parser = { path = "../parser", version = "0.190.0" }
ironplc-dsl = { path = "../dsl", version = "0.190.0" }
ironplc-problems = { path = "../problems", version = "0.190.0" }
ironplc-sources = { path = "../sources", version = "0.190.0" }
ironplc-container = { path = "../container", version = "0.190.0" }
log = "0.4.20"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
