[package]
name = "spec_test_macro"
description = "Proc-macro attribute for spec conformance tests"
version = "0.202.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
