[package]
name = "ironplc-vm-cli"
description = "Command line interface for the IronPLC bytecode virtual machine"
version = "0.230.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ironplcvm"
path = "src/main.rs"

# The Debug Adapter Protocol server. Feature-gated so the production
# `ironplcvm` binary does not pull in the DAP layer.
[[bin]]
name = "ironplcdap"
path = "src/dap_main.rs"
required-features = ["dap"]

[features]
# Enables the `ironplcdap` Debug Adapter Protocol server binary. Off by
# default so `ironplcvm` stays lean; CI builds it via `--features dap`.
dap = []

[dependencies]
ironplc-vm = { path = "../vm", version = "0.230.0" }
ironplc-container = { path = "../container", version = "0.230.0" }
clap = { version = "4.6", features = ["derive", "wrap_help"] }
ctrlc = "3"
env_logger = "0.11.10"
log = "0.4.29"
serde_json = "1.0"
time = "0.3.47"

[build-dependencies]
csv = "1"
ironplc-spec-requirements-gen = { path = "../spec_requirements_gen" }

[dev-dependencies]
assert_cmd = { version = "2.2" }
ironplc-container = { path = "../container", version = "0.230.0" }
blake3 = "1"
predicates = { version = "3.1" }
tempfile = "3"
ctor = "1.0"
spec_test_macro = { path = "../spec_test_macro" }

[lints]
workspace = true
