[package]
name = "ironplc-vm"
description = "Bytecode virtual machine for IronPLC"
version = "0.197.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-support = []
profiling = []

[dependencies]
ironplc-container = { path = "../container", version = "0.197.0" }

[dev-dependencies]
ironplc-vm = { path = ".", features = ["test-support"] }
proptest = "1"

[build-dependencies]
csv = "1"
