[package]
name = "ironplc-vm"
description = "Bytecode virtual machine for IronPLC"
version = "0.213.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-support = []
profiling = []

[dependencies]
ironplc-container = { path = "../container", version = "0.213.0" }

[dev-dependencies]
ironplc-vm = { path = ".", features = ["test-support"] }
proptest = "1"

[build-dependencies]
csv = "1"

# All integration tests live in a single binary so compile/link work (and
# llvm-cov instrumentation) is amortized across the whole suite instead of
# paid per-file. With every test file moved into `tests/it/`, no top-level
# `tests/*.rs` remain for Cargo to auto-discover — only this explicit target.
[[test]]
name = "it"
path = "tests/it/main.rs"

[lints]
workspace = true
