[package]
name = "ironplc-wasm"
description = "WebAssembly bindings for the IronPLC compiler and VM"
version = "0.161.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ironplc-dsl = { path = "../dsl", version = "0.161.0" }
ironplc-parser = { path = "../parser", version = "0.161.0" }
ironplc-codegen = { path = "../codegen", version = "0.161.0" }
ironplc-container = { path = "../container", version = "0.161.0" }
ironplc-vm = { path = "../vm", version = "0.161.0" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[dev-dependencies]
wasm-bindgen-test = "0.3"
